--- a/field-agent/client/src/index.css
+++ b/field-agent/client/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.agent-card {
+  border: 3px rgb(0, 16, 0) solid;
+  margin-bottom: 15px;
+  padding: 25px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.edit-form{
+  border: 3px rgb(4, 4, 4) solid;
+  margin-bottom: 15px;
+  padding: 25px;
 }
+
+button {
+  margin-top:15px;
+  margin-bottom:15px;
+  margin-left: 15px;
+  padding: 10px;
+
+}
+
+/* .edit-form{
+  margin-top:15px;
+  margin-bottom:15px;
+  padding:25px;
+  position:absolute;
+} */
+
+#put-right {
+  float:right;
+}
+
